# perudo-toolkit

./: .gitignore  README.md  fly.toml  pyproject.toml  render.yaml  run.bat
.github/workflows/: ci.yml
docs/: RULES_QUESTIONS.md  STACK.md  m1.md  m2.md
docs/steps/: STEP_S2.md  STEP_S3.md  STEP_S4.md  STEP_S5.md  STEP_S6.md  STEP_S7.md
models/: cfr_3p.pkl  cfr_4p.pkl  cfr_5p.pkl  cfr_6p.pkl
scripts/: calibrate_multi.py  modal_train.py  train_cfr.py
src/perudo/: __init__.py
src/perudo/core/: __init__.py  rules.py  types.py
src/perudo/m1/: __init__.py  calc.py
src/perudo/m2/: __init__.py  recommender.py
src/perudo/m3/: __init__.py  calibrator.py  reporter.py  simulator.py  strategies.py
src/perudo/m4/: __init__.py  _tables.py  bot.py  cfr.py  infostate.py  policy.py
src/perudo/web/: __init__.py  app.py  game_engine.py  logging_setup.py
src/perudo/web/multiplayer/: __init__.py  room_manager.py  ws_handler.py
src/perudo/web/templates/: advisor.html  base.html  lobby.html  play.html  proba.html  room.html  sim.html
tests/test_core/: test_rules.py  test_types.py
tests/test_m1/: test_calc.py
tests/test_m2/: test_recommender.py
tests/test_m3/: test_simulator.py
