[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "perudo"
version = "0.1.0"
description = "Perudo toolkit: probability calculator, action recommender, Monte Carlo simulator"
requires-python = ">=3.12"
dependencies = [
    "scipy>=1.13",
    "numpy>=2.0",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "ruff>=0.4",
    "mypy>=1.10",
    "httpx>=0.27",
]

[project.scripts]
perudo = "perudo.web.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/perudo"]

# ---------------------------------------------------------------------------
# Ruff — linter + formatter
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]  # assert autorisé dans les tests

# ---------------------------------------------------------------------------
# Mypy — vérification de types
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
files = ["src/"]

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/perudo --cov-report=term-missing --cov-fail-under=0"

[tool.coverage.run]
source = ["src/perudo"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]
